--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-move the share2weibo.scpt to iTunes/Script folder.
+Move the share2weibo.scpt to iTunes/Script folder.
 The src of scpt file is share2weibo.txt.
-You can do a little modification of the weibo name :-)
+You can do a little modification of the weibo name and picture :-)
+
+For Mac
